# sets

./: .gitignore  AGENTS.md  DESIGN_TELLO.md  DESIGN_TELLO_GAZEBO_REAL_TEST_FLOW.md  DESIGN_TELLO_ROS_NODE.md  REQUIREMENTS_TELLO.md  REQUIREMENTS_TELLO_ROS_NODE.md  RUN_TELLO_TWO_WAYPOINTS_TEST_SKILL.md  package.xml
data/: policy_convergence_result_cast_game2_0.pkl  policy_convergence_result_cast_game2_1.pkl  policy_convergence_result_cast_game2_2.pkl  policy_convergence_result_cast_game2_4.pkl  policy_convergence_result_cast_game2_5.pkl  policy_convergence_result_cast_game2_6.pkl  policy_convergence_result_cast_game2_7.pkl  policy_convergence_result_cast_game2_8.pkl  policy_convergence_result_cast_game2_9.pkl  rollout_result_policy_convergence_0.pkl  rollout_result_policy_convergence_1.pkl  rollout_result_policy_convergence_2.pkl  rollout_result_policy_convergence_3.pkl  rollout_result_policy_convergence_4.pkl  rollout_result_policy_convergence_5.pkl  rollout_result_policy_convergence_6.pkl  rollout_result_policy_convergence_7.pkl  rollout_result_policy_convergence_quadrotor_pure_0.pkl  rollout_result_policy_convergence_tello_stage3_0.pkl  rollout_result_rollout_quadrotor_pure_uct_mpc_0.pkl  rollout_result_rollout_quadrotor_pure_uct_single_0.pkl
launch/: drone_planner.launch  tello_planner.launch
plots/: tello_two_wp_ros_test_node_report.json
scripts/: benchmark_stability.sh  drone_planner_node.py  monitor_single_target_convergence.py  policy_convergence.py  rollout.py  run_tello_two_waypoints_auto.py  stanley_controller_node.py  tello_planner_node.py  (+3 more)
(+10 files in other folders)
